platform/controllers/adharplatform/resources/ingress/gitea-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitea-http-clusterip
  namespace: adhar-system
  labels:
    app.kubernetes.io/name: gitea
    app.kubernetes.io/instance: gitea
    app.kubernetes.io/component: server
    app.kubernetes.io/part-of: gitea
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/instance: gitea
    app.kubernetes.io/name: gitea
