platform/controllers/adharplatform/resources/ingress/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: adhar-system
  labels:
    app.kubernetes.io/name: argocd-server
    app.kubernetes.io/instance: argo-cd
    app.kubernetes.io/component: server
    app.kubernetes.io/part-of: argocd
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - adhar.localtest.me
      secretName: adhar-localtest-tls
  rules:
    - host: adhar.localtest.me
      http:
        paths:
          - path: /argocd
            pathType: Prefix
            backend:
              service:
                name: argo-cd-argocd-server
                port:
                  number: 443
